update revenue
